syntax = "proto3";
option java_package = "edu.usfca.cs.dfs";

message getStorageNode
{
    int32 port = 1;
}

message storageNodesList
{
    repeated getStorageNode portList = 1;
}